# microassert

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
cmake/: arm-none-eabi-toolchain.cmake  microassertConfig.cmake.in
docs/: API_REFERENCE.md  COOKBOOK.md  DESIGN.md  PORTING_GUIDE.md  TROUBLESHOOTING.md  VERIFICATION.md
include/: massert.h
src/: massert.c
tests/: CMakeLists.txt  Makefile  compile_fail.cmake  install_consumer.cmake  test_all.c
tests/fixtures/compile_fail/: bad_clock.c  bad_format.c  bad_halt.c  bad_hook.c  bad_reset.c
tests/fixtures/cxx_consumer/: main.cpp
tests/fixtures/install_consumer/: CMakeLists.txt  main.c
tests/fixtures/multi_tu/: a.c  b.c  main.c
tests/fixtures/readme_example/: main.c
